# PCANFD-CAN-BUS-Transceiver

./: README.md  canConfig.json
CANGuiApp/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
configuration/include/: configuration.hpp
configuration/src/: configuration.cpp
driver/peak-linux-driver-8.20.0/: test.rec
driver/peak-linux-driver-8.20.0/driver/: .Module.symvers.cmd  .modules.order.cmd  .pcan.ko.cmd  .pcan.mod.cmd  .pcan.mod.o.cmd  .pcan.o.cmd  modules.order  pcan.mod  pcan.mod.c
driver/peak-linux-driver-8.20.0/driver/src/: .pcan_common.o.cmd  .pcan_fifo.o.cmd  .pcan_filter.o.cmd  .pcan_fops.o.cmd  .pcan_isa.o.cmd  .pcan_main.o.cmd  .pcan_parse.o.cmd  .pcan_pci.o.cmd  .pcan_pci_spi.o.cmd  .pcan_pciec.o.cmd  .pcan_sja1000.o.cmd  .pcan_timing.o.cmd  .pcan_usb.o.cmd  .pcan_usb_core.o.cmd  .pcan_usbpro.o.cmd  .pcanfd_core.o.cmd  .pcanfd_pci.o.cmd  .pcanfd_ucan.o.cmd  .pcanfd_usb.o.cmd
driver/peak-linux-driver-8.20.0/lib/lib/: libpcan.so.6  libpcanfd.so.8
driver/peak-linux-driver-8.20.0/lib/lib32/: libpcan.so.6  libpcanfd.so.8
driver/peak-linux-driver-8.20.0/libpcanbasic/examples/NativeC++/: EventDrivenRead  GetSetParameter  LookUpChannel  ManualRead  ManualWrite  ThreadRead  TimerRead  TimerWrite  TraceFiles
driver/peak-linux-driver-8.20.0/libpcanbasic/examples/c/: pcaneventread  pcaneventwrite  pcanread  pcanwrite
driver/peak-linux-driver-8.20.0/libpcanbasic/pcanbasic/lib/: libpcanbasic.so.4.10.0
driver/peak-linux-driver-8.20.0/libpcanbasic/pcaninfo/: pcaninfo.1.4.0
driver/peak-linux-driver-8.20.0/test/: bitratetest  filtertest  pcan-settings  pcanfdtst  receivetest  receivetest_posix  transmitest  transmitest_posix
receiver/: CMakeLists.txt
receiver/include/: receive.hpp
receiver/scripts/: clean.sh  run.sh
receiver/src/: main.cpp  receive.cpp
scripts/: run.sh
transmitter/: CMakeLists.txt
transmitter/include/: transmit.hpp
transmitter/scripts/: run.sh
transmitter/src/: main.cpp  transmit.cpp
(+1 files in other folders)
